public/assets/content/css/shared-ltr.css
/* ... */
.nfs-social a:hover i {
  color: #000 !important;
}
.nf-copyright {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.nf-copyright .foot-des-link {
  color: #000;
}
.nf-copyright div {
  padding: 8px 0;
  padding: 8px 0;
  font-weight: 600;
  color: #666;
}
.nf-copyright div a {
  color: #666;
}
.navbar-logo img {
  width: 170px !important;
}
.nf-bottom {
  width: 100%;
  text-align: center;
  border-top: 1px solid #666;
}
.nav-arrow-icon {
  display: none;
}
.navbar-footer {
  display: none;
}
/* End New Navbar */

/*------------End navbar ------------*/
.flex-icon {
  position: fixed;
  top: 30%;
  left: -30px;
  z-index: 99999;
  width: 3.9rem;
  direction: ltr;
}
.flex-icon #services li {
  width: 3.8rem;
  height: 3.8rem;
  display: inline-block;
  margin: 0;
  list-style: none;
}
.flex-icon #services li .facebook {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  width: 3.8rem;
  height: 3.8rem;
  color: #74d4b3;
  font-size: 2rem;
  text-align: center;
  line-height: 3.8rem;
  background-color: #3b5998;
  transition: all 0.5s;
}
.flex-icon #services li .facebook i {
  color: #fff;
}
.flex-icon #services li .twitter {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  width: 3.8rem;
  height: 3.8rem;
  color: #74d4b3;
  font-size: 2rem;
  text-align: center;
  line-height: 3.8rem;
  background-color: #1DA1F2;
  transition: all 0.5s;
}
.flex-icon #services li .twitter i {
  color: #fff;
}
.flex-icon #services li .youtube {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  width: 3.8rem;
  height: 3.8rem;
  color: #74d4b3;
  font-size: 2rem;
  text-align: center;
  line-height: 3.8rem;
  background-color: #FF0000;
  transition: all 0.5s;
}
.flex-icon #services li .youtube i {
  color: #fff;
}
.flex-icon #services li .instagram {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  width: 3.8rem;
  height: 3.8rem;
  font-size: 2rem;
  text-align: center;
  line-height: 3.8rem;
  transition: all 0.5s;
  background: #d6249f;
  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
}
.flex-icon #services li .instagram i {
  color: white;
}
.flex-icon #services li .linkedin {
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  width: 3.8rem;
  height: 3.8rem;
  font-size: 2rem;
  text-align: center;
  line-height: 3.8rem;
  transition: all 0.5s;
  background: #fff !important;
}
.flex-icon #services li div:hover {
  width: 5.3rem;
}

/*------------ start home  ------------*/
.home-slidr img,
.home-slidr video {
  width: 100%;
  height: 412px;
  border-radius: 25px;
}
.home-slidr video {
  object-fit: cover;
}
.home-slidr .main-text {
  position: absolute;
  bottom: 13%;
  right: 23%;
  font-family: "Dubai-Bold";
  line-height: 3.46rem;
  overflow: visible;
  color: #fff;
  font-size: 40px;
  text-transform: uppercase;
}
.home-slidr .slick-dots {
  background-color: rgba(0, 0, 0, 0.25);
  border-bottom-left-radius: 25px;
  border-bottom-right-radius: 25px;
}
.home-slidr .slick-dots li button:before {
  font-family: "slick";
  font-size: 6px;
  line-height: 20px;
  position: absolute;
  top: 0;
  left: 0;
  width: 12px !important;
  height: 8px !important;
  border-radius: 5px !important;
  content: " " !important;
  opacity: 0.5;
  background-color: #fff !important;
  -webkit-font-smoothing: antialiased;
}
.home-slidr .slick-dots li.slick-active button:before {
  opacity: 1;
  background-color: #fff !important;
  width: 24px !important;
  left: -6px;
}
.hlm-btn {
  border-radius: 10px;
}

.filter-section .form-select:focus {
  border: none;
  background-color: transparent;
  box-shadow: none;
}
.filter-section .filter-exp {
  font-family: "Dubai-Medium";
  font-size: 1.4rem;
  line-height: 1.5rem;
  overflow: visible;
  color: #606060;
}
.filter-section .multiselect-dropdown-list-wrapper {
  border-radius: 15px;
  top: 133%;
  padding: 10px;
}
.filter-section .multiselect-dropdown-list {
  height: fit-content !important;
  padding: 0;
}
.filter-section .multiselect-dropdown-list div {
  border-bottom: 1px solid #D4D4D4 !important;
  display: flex;
  align-items: center;
  padding: 14px 7px;
}
.filter-section .multiselect-dropdown-list div:last-child {
  border: 0 !important;
}
.filter-section .filter-spanTitel {
  font-family: "Dubai-Regular";
  font-size: 1rem;
  line-height: 1.2rem;
  overflow: visible;
  color: #7E7E7E;
}
.filter-section .check-sel-filter {
  min-height: 59px !important;
  border: 1px solid #7E7E7E;
  border-radius: 12px;
  font-size: 17px;
    font-weight: 600;
}
.filter-section .check-sel-filter .multiselect-dropdown {
  border: none !important;
  width: 100% !important;
  padding: 2px 12px 0 !important;
  border-radius: 50px;
}
.filter-section .check-sel-filter .multiselect-dropdown span.placeholder {
  background-color: unset !important;
  color: #000;
  opacity: 1;
}
.filter-section .check-sel-filter .multiselect-dropdown .optext {
  background-color: transparent !important;
  font-family: "Dubai-Regular";
  font-size: 1.2rem;
  line-height: 1.2rem;
  overflow: visible;
  color: #7E7E7E;
  padding: 0 0px;
}
.filter-section .filter-icon {
  position: relative;
}
.filter-section .filter-icon::before {
  content: " ";
  width: 28px;
  height: 21px;
  background-image: url(../../App_Images/filter-icon.png);
  position: absolute;
  left: 25%;
}
.filter-section .search-icon {
  position: relative;
  background-color: #52BA64 !important;
}
.filter-section .search-icon::before {
  content: " ";
  width: 22px;
  height: 21px; 
  background-image: url(../../App_Images/SearchIcon.png);
  background-repeat: no-repeat;
  position: absolute;
  left: 26%;
  background-size: 19px;
  top: 21px;
}

.breadcrumb li a {
  font-family: "Dubai-Medium";
  font-size: 17px;
  line-height: 1.5rem;
  overflow: visible;
  color: #7E7E7E;
}
/* ... */

